--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,4 @@ endif()
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml QuickControls2)
 qt_standard_project_setup()
 
-set(TARGET_NAME helloworld)
-qt_add_executable(${TARGET_NAME} main.cpp)
-target_link_libraries(${TARGET_NAME} PRIVATE Qt6::Core Qt6::Gui Qt6::Qml
-                                             Qt6::QuickControls2)
+subdirs(hello)
