qt6_add_qml_module only work less than cmake-3.19

--- a/pixi.toml
+++ b/pixi.toml
@@ -7,8 +7,13 @@ version = "0.1.0"
 
 [dependencies]
 qt6-main = ">=6.10.1,<7"
+qt6-quick3d = ">=6.10.1,<7"
+qt6-3d = ">=6.10.1,<7"
 cxx-compiler = ">=1.9.0, <2"
 ninja = ">=1.12.1,<2"
+# CMake Error at .pixi/envs/default/Library/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:5499:EVAL:1 (cmake_language):
+#   cmake_language DEFER CALL may not be scheduled in directory:
+cmake = "<3.19.0"
 
 [tasks.configure]
 # Commands as lists so you can also add documentation in between.
@@ -23,18 +28,19 @@ cmd = [
   # We wanna build in the .build directory
   "-B",
   "build",
+  # "--debug-output",
+  "-DQT_FORCE_MIN_CMAKE_VERSION_FOR_USING_QT=3.18",
 ]
-inputs = ["src/CMakeLists.txt"]
+inputs = ["src/**/CMakeLists.txt"]
 outputs = ["build/CMakeFiles/"]
 
-# Build the executable but make sure CMake is configured first.
 [tasks.build]
 cmd = ["cmake", "--build", "build"]
 depends-on = ["configure"]
 inputs = ["src/*"]
-outputs = ["build/helloworld.exe"]
+outputs = ["build/hellocube.exe"]
 
-[tasks.start]
-cmd = ["build/helloworld"]
+[tasks.hello]
+cmd = ["build/hellocube.exe"]
 depends-on = ["build"]
 
